--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: My documentation test repo
 name: Evan Gambill
+author: Evan Gambill
 email: evanbg42@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This documentation project demonstrates how a Jekyll project in the /docs folder
